# rdp-broker

./: CMakeLists.txt  README.md  README_EN.md  README_RU.md  broker-config.c  broker-config.h  common.h  freerdp-broker.c  freerdp-broker.h  rdp-broker.c  rdp-broker.ini  sfreerdp.c  sfreerdp.h  version.h
.github/workflows/: main.yml
nng_client/: client.c  common.h  nng-client.c  nng-client.h  nng-extras.h  utils.c
nng_src/: CMakeLists.txt  agent-config.c  agent-config.h  agent.c  agent.sh  client.c  common.h  nng-client.c  nng-client.h  nng-common.h  nng-extras.c  rdp-agent.ini  utils.h
